--- a/app.conf
+++ b/app.conf
@@ -1,3 +1,6 @@
+[global]
+server.socket_host: '0.0.0.0'
+
 [/res]
 tools.staticdir.on = True
-tools.staticdir.dir = "/home/gonccalo/projects/listasGenerator/res"
+tools.staticdir.dir = "/usr/src/app/res"
